[workspace]
resolver = "2"
members = ["crates/inkling", "crates/inkling-cli"]

# inkling-py builds as a Python extension via maturin (it needs a Python
# interpreter), so it is kept out of the default cargo workspace.
exclude = ["crates/inkling-py"]

# Future members (more bindings around the same pure core):
#   crates/inkling-node  Node (napi-rs)
#   crates/inkling-wasm  browser demo (wasm-bindgen)
