[workspace]
resolver = "2"
members = ["crates/inkling", "crates/inkling-cli"]

# The language bindings build with their own toolchains and targets (maturin,
# wasm-pack, napi-rs), so they are kept out of the default cargo workspace.
exclude = ["crates/inkling-py", "crates/inkling-wasm", "crates/inkling-node"]
