[package]
name = "inkling-node"
version = "0.1.5"
edition = "2021"
rust-version = "1.77"
description = "Node bindings for inkling: reveal ASCII art as a progress indicator."
repository = "https://github.com/codizzler/inkling"
license = "MIT"
publish = false

# Its own workspace root: the parent cargo workspace excludes this crate because
# it builds as a native Node addon with napi-rs, not a plain cargo build.
[workspace]

# The library is named after the package (inkling_node) so napi-rs can find the
# compiled cdylib; the JS-facing name comes from `napi.name` in package.json.
[lib]
crate-type = ["cdylib"]

# Node has a terminal, so this pulls in the full library (the live renderer),
# unlike the browser build. Aliased to inkling-core to read clearly.
[dependencies]
inkling-core = { package = "inkling-loader", path = "../inkling" }
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
